# fluid_simulation

./: .gitignore  readme.md
figures/: plot_c_time_data.ipynb
fluid_cpp/: CMakeLists.txt  cuda_main.cpp  cuda_main.cu  main.cpp  readme.md
fluid_cpp/cpp/: NavierStokesCell.h  NavierStokesSolver.cpp  NavierStokesSolver.h  SerialNavierStokes.cpp  SerialNavierStokes.h  SerielNavierStokes.cpp  SerielNavierStokes.h  ThreadedNavierStokes.cpp  ThreadedNavierStokes.h
fluid_cpp/cuda/: ParallelNavierStokes.cu  ParallelNavierStokes.cuh  TiledNavierStokes.cu  TiledNavierStokes.cuh
fluid_cpp/tests/: test_main.cpp
python/: benchmark_solution.py  functions.py  navier_stokes.py  plot_solution.py
